--- a/yum/index.html
+++ b/yum/index.html
@@ -9,6 +9,28 @@
   	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
   </head>
   <body>
-	<!-- This is where your page content goes-->
+	<header>
+    <h1>BEST LEMONADE EVER</h1>
+    <h2>Twenty servings ready in just under five hours</h2>
+  </header>
+
+
+<section id='content'>
+        <ul>
+        <li>1&frac34; c white sugar</li>
+        <li>8 c water</li>
+        <li>1&frac12; c fresh lemon juice</li>
+      </ul>
+      <ol>
+<li>In a small saucepan, combine sugar and 1 cup of water</li>
+<li>Bring the saucepan to a boil and stir until sugar is completely disolved.</li>
+<li>Remove seeds from the hand squeezed lemon juice, but leave most of the pulp.</li>
+<li>In a pitcher, stir together chilled syrup, lemon juice and remaining 7 cups of water.</li>
+<li>Mix together to pale yellow color. Cool in a refrigerator</li>
+<li>Serve in a glass cup with a couple of ice. Best if not used for sibling rivalry and lemonade stand competitions.</li>
+</ol>
+
+</section>
+
   </body>
 </html>
