--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <title>My Title</title>
+    <link rel="stylesheet" type='text/css' href="sample.css" />
   </head>
   <body>
+    <header>
+    	<img alt="title for page" src="dogvscat-logo.gif"/>
+    	 <nav id='top-menu'>
+      <ul class='menu'>
+        <li><a href="#">Photos</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Submit</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</nav>
+</header>
+    <section id='content'>
+      <article class='blog-post'>
+       
+        	<img alt="dog picture" src="#"/>
+        	<h1>Dogs have Better Noses</h1>
+        	<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
+        	<img alt="cat picture" src="#"/>
+        	<h2>Cats Have Better Toungs</h2>
+        	<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
+      
+        </article>
+        </section>
+        <footer id='site-footer'>
+      <nav id='footer-nav'>
+        <p>images and copy from<a href="#" target="_blank">wiki commons</a></p>
 
+      <p>copyright &copy;2011<a href="#" target="_blank">martha rettig</a></p>
+        </nav>
+
+    </footer>
   </body>
 </html>
