--- a/homework/index.html
+++ b/homework/index.html
@@ -11,9 +11,9 @@
 		<h2>Meee!</h2>
 				<p><a href='http://sishii128.github.io/meeee/'>http://sishii128.github.io/meeee/</a></p>
 		<h2>Yum</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href='http://sishii128.github.io/yum/'>http://sishii128.github.io/yum/</a></p>
 		<h2>Cats vs Dogs</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href='http://sishii128.github.io/cats-vs-dogs/'>http://sishii128.github.io/cats-vs-dogs/</a></p>
 		<h2>Wireframes</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Llama Love</h2>
