--- a/meeee/index.html
+++ b/meeee/index.html
@@ -9,6 +9,7 @@
 	<section id='content'>
 	   <h1>Shin Ishii</h1>
 	   <h2>GD Junior</h2>
+	   <img src="images/own-picture.jpg" alt="picture"/>
 	   <p>I want to get a basic knowledge of how to create websites!</p>
 	</section>
 	
