--- a/meeee/index.html
+++ b/meeee/index.html
@@ -11,6 +11,7 @@
 	   <h2>GD Junior</h2>
 	   <img src="images/own-picture.jpg" alt="picture"/>
 	   <p>I want to get a basic knowledge of how to create websites!</p>
+	   <p>preferred e-mail: sishii@massart.edu</p>
 	</section>
 	
 </body>
