--- a/yum/index.html
+++ b/yum/index.html
@@ -31,7 +31,7 @@
           <li>Serve in a glass cup with a couple of ice. Best if not used for sibling rivalry and lemonade stand competitions.</li>
         </ol>
 
-        <a href ="recipe card 2.html">recipe card 2 </a>
+        <a href ="recipe-card-2.html">recipe card 2 </a>
 
 </section>
 
