--- a/yum/index.html
+++ b/yum/index.html
@@ -16,6 +16,7 @@
 
 
 <section id='content'>
+  <article>
         <ul>
         <li>1&frac34; c white sugar</li>
         <li>8 c water</li>
@@ -24,16 +25,19 @@
 
         <ol>
           <li>In a small saucepan, combine sugar and 1 cup of water</li>
-          <li>Bring the saucepan to a boil and stir until sugar is completely disolved.</li>
+          <li>Bring the saucepan to a boil and stir until sugar is completely disolved.Allow the water to cool to room temperature.</li>
           <li>Remove seeds from the hand squeezed lemon juice, but leave most of the pulp.</li>
           <li>In a pitcher, stir together chilled syrup, lemon juice and remaining 7 cups of water.</li>
           <li>Mix together to pale yellow color. Cool in a refrigerator</li>
           <li>Serve in a glass cup with a couple of ice. Best if not used for sibling rivalry and lemonade stand competitions.</li>
         </ol>
 
-        <a href ="recipe-card-2.html">recipe card 2 </a>
 
+</article>
 </section>
+<footer>
+        <a href ="recipe-card-2.html">recipe card 2 </a>
+        </footer>
 
   </body>
 </html>
