--- a/homework/index.html
+++ b/homework/index.html
@@ -17,13 +17,13 @@
 		<h2>Wireframes</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Llama Love</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href='http://sishii128.github.io/llama-love/'>http://sishii128.github.io/llama-love/</a></p>
 		<h2>Robots</h2>
 		    	<p>Add your link(s) Here</p>
 		<h2>Final Project</h2>
 				<p>Add your link(s) Here</p>				
 	</section>
 
-</body>
+</body>sishii.github.io/llama-love/
 </html>
 
