--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -5,28 +5,35 @@
     <link rel="stylesheet" type='text/css' href="reset.css" />
   </head>
   <body>
-    <header>
-    	<img src= "images/dogvscat-logo.gif" alt="dogvscat-logo"/>
+    <header id='site-header'>
+    <h1><a href='#'>Dog vs Cats</a></h1>
+    </header>
     	 <nav id='top-menu'>
       <ul class='menu'>
-        <li><a href="#">PHOTOS</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">SUBMIT</a></li>
-        <li><a href="#">BLOG</a></li>
-        <li><a href="#">CONTACT</a></li>
+        <li><a href="#" style="text-decoration: none;">PHOTOS</a></li>
+        <li>&bullet;</li>
+        <li><a href="#" style="text-decoration: none;">ABOUT</a></li>
+         <li>&bullet;</li>
+        <li><a href="#" style="text-decoration: none;">SUBMIT</a></li>
+         <li>&bullet;</li>
+        <li><a href="#" style="text-decoration: none;">BLOG</a></li>
+         <li>&bullet;</li>
+        <li><a href="#" style="text-decoration: none;">CONTACT</a></li>
+
     </ul>
 </nav>
-</header>
     <section id='content'>
       <article class='blog-post'>
-       
+       <div id="left">
         	<img src="images/dog-pic.jpg" alt="dog pic"/>
         	<h1>Dogs have Better Noses</h1>
         	<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
+        </div>
+        <div id="right">
         	<img src="images/cat-pic.jpg" alt="cat pic"/>
         	<h2>Cats Have Better Toungs</h2>
         	<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
-      
+      </div>
         </article>
         </section>
         <footer id='site-footer'>
