--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -8,10 +8,9 @@
     <header id='site-header'>
     <h1><a href='#'>Dog vs Cats</a></h1>
     </header>
-
+<hr>
     	 <nav id='top-menu'>
       <ul class='menu'>
-
         <li><a href="#" style="text-decoration: none;">PHOTOS</a></li>
         <li>&bullet;</li>
         <li><a href="#" style="text-decoration: none;">ABOUT</a></li>
@@ -23,12 +22,14 @@
         <li><a href="#" style="text-decoration: none;">CONTACT</a></li>
 
     </ul>
+
 </nav>
 
     <section id='content'>
 
       <article class='blog-post'>
-      
+<hr width="409.8%">    
+
         	<img src="images/dog-pic.jpg" alt="dog pic"/>
         	<h1>Dogs have Better Noses</h1>
         	<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
