--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -28,23 +28,30 @@
     <section id='content'>
 
       <article class='blog-post'>
-<hr width="409.8%">    
+<hr>
+<div class='article1'>
 
         	<img src="images/dog-pic.jpg" alt="dog pic"/>
         	<h1>Dogs have Better Noses</h1>
         	<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
-        
+</div>  
+<div class='article2'>        
         	<img src="images/cat-pic.jpg" alt="cat pic"/>
         	<h2>Cats Have Better Toungs</h2>
         	<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
-      
+</div>
         </article>
         </section>
+
         <footer id='site-footer'>
       <nav id='footer-nav'>
-        <p>images and copy from<a href="#" target="_blank">wiki commons</a></p>
-
-      <p>copyright &copy;2011<a href="#" target="_blank">martha rettig</a></p>
+        <hr>
+        <div class'link1'>
+        <p>images and copy from<a href="#" target="_blank"> wiki commons</a></p>
+      </div>
+      <div class='link2'>
+      <p>copyright &copy;2011<a href="#" target="_blank"> martha rettig</a></p>
+      </div>  
         </nav>
 
     </footer>
