--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -46,11 +46,11 @@
         <footer id='site-footer'>
       <nav id='footer-nav'>
         <hr>
-        <div class'link1'>
-        <p>images and copy from<a href="#" target="_blank"> wiki commons</a></p>
+        <div class='link1'>
+        <p>images and copy from<a href="#" style="text-decoration:none" target="_blank"> <span style="color: #980000"> wiki commons </a></p>
       </div>
       <div class='link2'>
-      <p>copyright &copy;2011<a href="#" target="_blank"> martha rettig</a></p>
+      <p>copyright &copy;2011<a href="#" style="text-decoration:none" target="_blank"> <span style="color: #980000">martha rettig</span></a></p>
       </div>  
         </nav>
 
