--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -47,7 +47,7 @@
       <nav id='footer-nav'>
         <hr>
         <div class='link1'>
-        <p>images and copy from<a href="#" style="text-decoration:none" target="_blank"> <span style="color: #980000"> wiki commons </a></p>
+        <p>images and copy from<a href="#" style="text-decoration:none" target="_blank"> <span style="color: #980000"> wiki commons </span></a></p>
       </div>
       <div class='link2'>
       <p>copyright &copy;2011<a href="#" style="text-decoration:none" target="_blank"> <span style="color: #980000">martha rettig</span></a></p>
