--- a/homework/index.html
+++ b/homework/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Web304 Homework</title>
+	<title>Web304 Homework!</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head>
 <body>
