--- a/final/user-stories.html
+++ b/final/user-stories.html
@@ -42,12 +42,12 @@
     	<li>He is looking for wedding invitations to be designed</li>
     	<li>He wants to see different angles and perspectives of designer's work</li>
     	<li>He prefers contacting over the internet such as social networking</li>
-    	<li>Wants to knwo what he is clicking, maybe through changing colors of icons</li>
+    	<li>Wants to know what he is clicking, maybe through changing colors of icons</li>
     </ul>
 
-    <img src='images/sketch1.jpg' alt="sketch1">
-    <img src='images/sketch2.jpg' alt="sketch2">
-    <img src='images/sketch3.jpg' alt="sketch3">
+    <img src='images/sketch1.jpg' alt="sketch1"/>
+    <img src='images/sketch2.jpg' alt="sketch2"/>
+    <img src='images/sketch3.jpg' alt="sketch3"/>
     	
 
   </article>
