--- a/homework/index.html
+++ b/homework/index.html
@@ -21,7 +21,7 @@
 		<h2>Robots</h2>
 		    	<p><a href='http://sishii128.github.io/robots/'>http://sishii128.github.io/robots/</p>
 		<h2>Final Project</h2>
-				<p><a href='http://sishii128.github.io/final/user-stories'> user stories and sketches </a></p>				
+				<p><a href='http://sishii128.github.io/final/user-stories.html'> user stories and sketches </a></p>				
 	</section>
 
 </body>
