--- a/final/work.html
+++ b/final/work.html
@@ -21,8 +21,9 @@ h1{font-size:15px;}
   <body>
   	<header class='circle'>
   		<h1><a href="webpage_text.html" style="text-decoration: none;">SHIN ISHII</a></h1>
+    </header>
 
-  	  <nav id='top-menu'/>
+  	  <nav id='top-menu'>
       <ul class='menu'>
         <li class='circle'><a href="about.html" style="text-decoration: none;">ABOUT</a></li>
         
@@ -32,6 +33,9 @@ h1{font-size:15px;}
       </ul>
   </nav>
 
-  <section>
     <article>
-      <img><a href='100_things_poster.html'><img src='images/100poster.jpg'/></a>
+      <a href="100poster.html"><img src="images/100poster.png" alt="100poster"/></a>
+      <a href="songposter.html"><img src="images/songposter.png" alt="songposter"/></a>
+       <a href="lemon.html"><img src="images/lemonrecipes.png" alt="lemon"/></a>
+  </article>
+</body>
