--- a/final/work.html
+++ b/final/work.html
@@ -37,5 +37,6 @@ h1{font-size:15px;}
       <a href="100poster.html"><img src="images/100poster.png" alt="100poster"/></a>
       <a href="songposter.html"><img src="images/songposter.png" alt="songposter"/></a>
        <a href="lemon.html"><img src="images/lemonrecipes.png" alt="lemon"/></a>
+       <a href="opposites.html"><img src="images/opposites.png" alt="opposites"/></a>
   </article>
 </body>
