--- a/final/100poster.html
+++ b/final/100poster.html
@@ -33,10 +33,5 @@ h1{font-size:15px;}
       </ul>
   </nav>
 
-    <article>
-      <a href="100poster.html"><img src="images/100poster.png" alt="100poster"/></a>
-      <a href="lemon.html"><img src="images/lemonrecipes.png" alt="lemon"/></a>
-      <a href="songposter.html"><img src="images/songposter.png" alt="songposter"/></a> 
-       <a href="opposites.html"><img src="images/opposites.png" alt="opposites"/></a>
-  </article>
-</body>
+  <article>
+    <img src='images/Ishii_poster_ia-2013.png' alt="llama-photo"/>
