--- a/final/100poster.html
+++ b/final/100poster.html
@@ -34,4 +34,5 @@ h1{font-size:15px;}
   </nav>
 
   <article>
-    <img src='images/Ishii_poster_ia-2013.png' alt="llama-photo"/>
+    <img src='images/Ishii_poster_ia2013.png' alt="poster"/>
+  </article>
