--- a/final/100poster.html
+++ b/final/100poster.html
@@ -11,6 +11,8 @@ text-align:center;
 background:#000;
 margin:5px;
 }
+img{height:50%;
+    width:50%;}
 h1{font-size:15px;}
 </style>
 
@@ -35,4 +37,6 @@ h1{font-size:15px;}
 
   <article>
     <img src='images/Ishii_poster_ia2013.png' alt="poster"/>
+    <img src='images/close_up.png' alt="close"/>
+    <img src='images/close_up2.png' alt="close2"/>
   </article>
