--- a/final/lemon.html
+++ b/final/lemon.html
@@ -16,10 +16,10 @@ img{height:50%;
 h1{font-size:15px;}
 </style>
 
-  
+  <head>
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="reset.css" />
-  
+  </head>
   <body>
   	<header class='circle'>
   		<h1><a href="webpage_text.html" style="text-decoration: none;">SHIN ISHII</a></h1>
@@ -36,25 +36,13 @@ h1{font-size:15px;}
   </nav>
 
   <article>
-    <img src='images/Ishii_poster_ia2013.png' alt="poster"/>
-    <img src='images/close_up.png' alt="close"/>
-    <img src='images/close_up3.png' alt="close3"/>
-    <img src='images/close_up2.png' alt="close2"/>
-    
+    <img src='images/lemon1.jpg' alt="poster"/>
+    <img src='images/lemon2.jpg' alt="close"/>
+    <img src='images/lemon3.jpg' alt="close3"/>
+ 
   </article>
 
   <article>
-    <h1>A Visualization of 100 Bass Guitars</h1>
-    <p> A poster featuring data of the last 100 bass guitars I have played at an instrument store. Data organized in a format where viewer can see each specific attribute of the instrument. </p>
+    <h1>When Life Gifes You Lemons</h1>
+    <p> A set of 10 recipe cards. The recipe cards were designed to portray a feeling of old style children's books. The case was designed to portray a vintage boook case to accompany the old-style atmosphere from the recipe cards.</p>
   </article>
-
-  <aside>
-    <h1>Projects</h1>
-    <ul class='project menu'>
-        <li><a href="lemon.html" style="text-decoration: none;">Recipe Cards</a></li>
-        <li><a href="songposter.html" style="text-decoration: none;">DAY 1 Poster</a></li>
-        <li><a href="opposites.html" style="text-decoration: none;">Opposites</a></li>
-      </ul>
-  </aside>
-
-
