--- a/final/opposites.html
+++ b/final/opposites.html
@@ -16,7 +16,7 @@ img{height:50%;
 h1{font-size:15px;}
 </style>
 
-  
+
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="reset.css" />
   
@@ -36,16 +36,13 @@ h1{font-size:15px;}
   </nav>
 
   <article>
-    <img src='images/Ishii_poster_ia2013.png' alt="poster"/>
-    <img src='images/close_up.png' alt="close"/>
-    <img src='images/close_up3.png' alt="close3"/>
-    <img src='images/close_up2.png' alt="close2"/>
-    
+    <img src='images/opposites_image.jpg' alt="image"/>
+    <img src='images/opposites2.jpg' alt="image2"/>
   </article>
 
-  <article>
-    <h1>A Visualization of 100 Bass Guitars</h1>
-    <p> A poster featuring data of the last 100 bass guitars I have played at an instrument store. Data organized in a format where viewer can see each specific attribute of the instrument. </p>
+    <article>
+    <h1>Opposites</h1>
+    <p> A series of posters featuring the two opposite meanings: healthy and unhealthy. Two posters were created where one was image based and the other was typography based. The concept for the posters was to showcase two different objects which were similar in shape to convey two opposing meanings.</p>
   </article>
 
   <aside>
@@ -56,5 +53,3 @@ h1{font-size:15px;}
         <li><a href="opposites.html" style="text-decoration: none;">Opposites</a></li>
       </ul>
   </aside>
-
-
