--- a/final/songposter.html
+++ b/final/songposter.html
@@ -36,25 +36,7 @@ h1{font-size:15px;}
   </nav>
 
   <article>
-    <img src='images/Ishii_poster_ia2013.png' alt="poster"/>
-    <img src='images/close_up.png' alt="close"/>
-    <img src='images/close_up3.png' alt="close3"/>
-    <img src='images/close_up2.png' alt="close2"/>
+    <img src='images/songposter.jpg' alt="poster"/>
+ 
     
   </article>
-
-  <article>
-    <h1>A Visualization of 100 Bass Guitars</h1>
-    <p> A poster featuring data of the last 100 bass guitars I have played at an instrument store. Data organized in a format where viewer can see each specific attribute of the instrument. </p>
-  </article>
-
-  <aside>
-    <h1>Projects</h1>
-    <ul class='project menu'>
-        <li><a href="lemon.html" style="text-decoration: none;">Recipe Cards</a></li>
-        <li><a href="songposter.html" style="text-decoration: none;">DAY 1 Poster</a></li>
-        <li><a href="opposites.html" style="text-decoration: none;">Opposites</a></li>
-      </ul>
-  </aside>
-
-
