--- a/final/songposter.html
+++ b/final/songposter.html
@@ -37,6 +37,10 @@ h1{font-size:15px;}
 
   <article>
     <img src='images/songposter.jpg' alt="poster"/>
+  </article>
  
     
+  <article>
+      <h1>DAY 1 Poster</h1>
+    <p> A poster for the song DAY 1 by a Japanese Guitarist named Miyavi. The poster was created from influence by designer Takashi Kondo. The concept of the poster was to create the strong layers of the song through painting and photo collaging.</p>
   </article>
