--- a/final/about.html
+++ b/final/about.html
@@ -11,22 +11,23 @@ background:#000;
 margin:5px;
 }
 li{list-style:none;}
+a{color:white;}
 img{width:30%;
     height:30%; }
 h1{font-size:15px;}
 .content{}
 </style>
 
-  <head>
+  
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="reset.css" />
-  </head>
+  
   <body>
   	<header class='circle'>
   		<h1><a href="webpage_text.html" style="text-decoration: none;">SHIN ISHII</a></h1>
 </header
 >
-  	  <nav id='top-menu'/>
+  	  <nav id='top-menu'>
       <ul class='menu'>
         <li class='circle'><a href="about.html" style="text-decoration: none;">ABOUT</a></li>
         
@@ -41,10 +42,10 @@ h1{font-size:15px;}
       <img src="images/own-picture.jpg" alt="picture"/>
       <p>Hi my name is Shin Ishii. I'm currently a junior studying Graphic Design at Massachusetts College of Art and Design. I focus a lot of my work on playfulness and user experience. I like to make things look better, while still maintaining an easy-to-use concept. Being both a designer and a studio recording bassist, I try to maintain a rhythm throughout my design work. </p>
       <p>Feel free to contact me through e-mail or twitter about any design work or just to say hi!</p>
-
+<ul>
        <li><a href="mailto:sishii@massart.edu">EMAIL LOGO</a></li>
        <li><a href="https://twitter.com"> TWITTER LOGO</a></li>
-
+</ul>
     </article>
   </section>
 </body>
