--- a/final/lemon.html
+++ b/final/lemon.html
@@ -11,15 +11,15 @@ text-align:center;
 background:#000;
 margin:5px;
 }
+a{color:white;}
 img{height:50%;
     width:50%;}
 h1{font-size:15px;}
 </style>
 
-  <head>
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="reset.css" />
-  </head>
+
   <body>
   	<header class='circle'>
   		<h1><a href="webpage_text.html" style="text-decoration: none;">SHIN ISHII</a></h1>
