--- a/homework/index.html
+++ b/homework/index.html
@@ -22,7 +22,8 @@
 		    	<p><a href='http://sishii128.github.io/robots/'>http://sishii128.github.io/robots/</p>
 		<h2>Final Project</h2>
 				<p><a href='http://sishii128.github.io/final/user-stories.html'> user stories and sketches </a></p>	
-				<p><a href='http://sishii128.github.io/final/webpage_text.html'>portfolio site</a></p>			
+				<p><a href='http://sishii128.github.io/final/webpage_text.html'>portfolio site</a></p>	
+				<p><a href='https://groups.google.com/forum/#!topic/webfall2013/onheLKb2TcE'>mock ups link</a></p>
 	</section>
 
 </body>
