--- a/final/about.html
+++ b/final/about.html
@@ -1,51 +1,55 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
 <style>
-.circle{width:120px;
-height:120px;
+.circle{width:80px;
+height:80px;
 border-radius:250px;
-font-size:15px;
-line-height:120px;
+font-size:0.8em;
+color:#fff;
+line-height:80px;
 text-align:center;
 background:#000;
 margin:5px;
 }
-li{list-style:none;}
-a{color:white;}
-img{width:30%;
-    height:30%; }
+.circle a{color:white;
+  list-style:none;}
 h1{font-size:15px;}
-.content{}
 </style>
 
   
     <title>My Title</title>
-    <link rel="stylesheet" type='text/css' href="reset.css" />
+    <link rel="stylesheet" type='text/css' href="profile.css" />
   
-  <body>
-  	<header class='circle'>
-  		<h1><a href="webpage_text.html" style="text-decoration: none;">SHIN ISHII</a></h1>
-</header
->
-  	  <nav id='top-menu'>
-      <ul class='menu'>
-        <li class='circle'><a href="about.html" style="text-decoration: none;">ABOUT</a></li>
-        
-        <li class='circle'><a href="work.html" style="text-decoration: none;">WORK</a></li>
-        
-        <li class='circle'><a href="resume.html" style="text-decoration: none;">RESUME</a></li>
-      </ul>
-  </nav>
 
-  <section id='content'>
-    <article>
-      <img src="images/own-picture.jpg" alt="picture"/>
+  <body id='website'>
+    <header id='site-header'>
+  <h1><a href='webpage_text.html'>Site Logo</a></h1>
+  <nav id='top-nav'>
+    <ul>
+    <li class='circle'>
+      <a href='about.html' style="text-decoration: none;">ABOUT</a> 
+      </li>
+      <li class='circle'> 
+        <a href='work.html' style="text-decoration: none;">WORK</a>
+      </li>
+      <li class='circle'>
+        <a href='resume.html' style="text-decoration: none;">RESUME</a>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+
+  <div id='content'>
+      <img id='me' src="images/own-picture.jpg" alt="picture"/>
+    <div class='aboutme'>
       <p>Hi my name is Shin Ishii. I'm currently a junior studying Graphic Design at Massachusetts College of Art and Design. I focus a lot of my work on playfulness and user experience. I like to make things look better, while still maintaining an easy-to-use concept. Being both a designer and a studio recording bassist, I try to maintain a rhythm throughout my design work. </p>
+      <br>
       <p>Feel free to contact me through e-mail or twitter about any design work or just to say hi!</p>
-<ul>
+<ul id='contacts'>
        <li><a href="mailto:sishii@massart.edu">EMAIL LOGO</a></li>
        <li><a href="https://twitter.com"> TWITTER LOGO</a></li>
 </ul>
-    </article>
-  </section>
+</div>
+</div>
 </body>
