--- a/final/webpage_text.html
+++ b/final/webpage_text.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html>
 <style>
-.circle{width:120px;
-height:120px;
+.circle{width:80px;
+height:80px;
 border-radius:250px;
-font-size:15px;
+font-size:0.8em;
 color:#fff;
-line-height:120px;
+line-height:80px;
 text-align:center;
 background:#000;
 margin:5px;
 }
-a{color:white;}
+a{color:white;
+  list-style:none;}
 h1{font-size:15px;}
 </style>
 
   <head>
     <title>My Title</title>
-    <link rel="stylesheet" type='text/css' href="reset.css" />
+    <link rel="stylesheet" type='text/css' href="style.css" />
   </head>
   <body>
-  	<header class='circle'>
-  		<h1><a href="webpage_text.html" style="text-decoration: none;">SHIN ISHII</a></h1>
-
-  	  <nav id='top-menu'/>
-      <ul class='menu'>
-        <li class='circle'><a href="about.html" style="text-decoration: none;">ABOUT</a></li>
-        
-        <li class='circle'><a href="work.html" style="text-decoration: none;">WORK</a></li>
-        
-        <li class='circle'><a href="resume.html" style="text-decoration: none;">RESUME</a></li>
-      </ul>
+    <div id='website'>
+  	<header id='site-header'>
+  <h1><a href='sishii128.github.io/final/webpage_text.html/'>Site Logo</a></h1>
+  <nav id='top-nav'>
+    <ul>
+    <li class='circle'>
+      <a href='about.html'>ABOUT</a> 
+      </li>
+      <li class='circle'> 
+        <a href='work.html'>WORK</a>
+      </li>
+      <li class='circle'>
+        <a href='resume.html'>RESUME</a>
+      </li>
   </nav>
+</header>
+</div>
