--- a/final/100poster.html
+++ b/final/100poster.html
@@ -40,14 +40,15 @@ h1{font-size:15px;}
 </header>
 
   <div id='photos'>
-    <img src='images/Ishii_poster_ia2013.png' alt="poster"/>
-    <img src='images/close_up.png' alt="close"/>
-    <img src='images/close_up3.png' alt="close3"/>
-    <img src='images/close_up2.png' alt="close2"/>
+    <img class='image1' src='images/Ishii_poster_ia2013.png' alt="poster"/>
+    <img class='image2' src='images/close_up.png' alt="close"/>
+    <img class='image3' src='images/close_up3.png' alt="close3"/>
+    <img class='image4' src='images/close_up2.png' alt="close2"/>
   </div>
 
   <div id='information'>
     <h1>A Visualization of 100 Bass Guitars</h1>
+    <br>
     <p> A poster featuring data of the last 100 bass guitars I have played at an instrument store. Data organized in a format where viewer can see each specific attribute of the instrument. </p>
   </div>
 
