--- a/final/opposites.html
+++ b/final/opposites.html
@@ -17,34 +17,58 @@ img{height:50%;
 h1{font-size:15px;}
 </style>
 
-
-    <title>My Title</title>
-    <link rel="stylesheet" type='text/css' href="style.css" />
   
-  <body>
-  	<header class='circle'>
-  		<h1><a href="webpage_text.html" style="text-decoration: none;">SHIN ISHII</a></h1>
-    </header>
+  <!DOCTYPE html>
+<html>
+<style>
+.circle{width:80px;
+height:80px;
+border-radius:250px;
+font-size:0.8em;
+color:#fff;
+line-height:80px;
+text-align:center;
+background:#000;
+margin:5px;
+}
+.circle a{color:white;
+  list-style:none;}
+h1{font-size:15px;}
+</style>
 
-  	  <nav id='top-menu'>
-      <ul class='menu'>
-        <li class='circle'><a href="about.html" style="text-decoration: none;">ABOUT</a></li>
-        
-        <li class='circle'><a href="work.html" style="text-decoration: none;">WORK</a></li>
-        
-        <li class='circle'><a href="resume.html" style="text-decoration: none;">RESUME</a></li>
-      </ul>
+  
+    <title>My Title</title>
+    <link rel="stylesheet" type='text/css' href="artworkpage.css" />
+  
+
+  <body id='website'>
+    <header id='site-header'>
+  <h1><a href='webpage_text.html'>Site Logo</a></h1>
+  <nav id='top-nav'>
+    <ul>
+    <li class='circle'>
+      <a href='about.html' style="text-decoration: none;">ABOUT</a> 
+      </li>
+      <li class='circle'> 
+        <a href='work.html' style="text-decoration: none;">WORK</a>
+      </li>
+      <li class='circle'>
+        <a href='resume.html' style="text-decoration: none;">RESUME</a>
+      </li>
+    </ul>
   </nav>
+</header>
 
-  <article>
+  <div id='photos'>
     <img src='images/opposites_image.jpg' alt="image"/>
     <img src='images/opposites2.jpg' alt="image2"/>
-  </article>
+  </div>
 
-    <article>
+    <div id='information'>
     <h1>Opposites</h1>
+    <br>
     <p> A series of posters featuring the two opposite meanings: healthy and unhealthy. Two posters were created where one was image based and the other was typography based. The concept for the posters was to showcase two different objects which were similar in shape to convey two opposing meanings.</p>
-  </article>
+ </div>
 
   <aside>
     <h1>Projects</h1>
