--- a/final/10climate.html
+++ b/final/10climate.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+   <!DOCTYPE html>
 <html>
 <style>
 .circle{width:80px;
@@ -18,7 +18,7 @@ h1{font-size:15px;}
 
   
     <title>My Title</title>
-    <link rel="stylesheet" type='text/css' href="workpage.css" />
+    <link rel="stylesheet" type='text/css' href="artworkpage.css" />
   
 
   <body id='website'>
@@ -39,12 +39,15 @@ h1{font-size:15px;}
   </nav>
 </header>
 
-  <div id='pictures'>
-      <a href="100poster.html"><img id ='bass' src="images/100poster.png" alt="100poster"/></a>
-      <a href="lemon.html"><img id='lemons' src="images/lemonrecipes.png" alt="lemon"/></a>
-      <a href="songposter.html"><img id='miyavi' src="images/songposter.png" alt="songposter"/></a> 
-       <a href="opposites.html"><img id='opposites' src="images/opposites.png" alt="opposites"/></a>
-       <a href="10climate.html"><img id='climate' src="images/climate.jpg" alt="climate"/></a>
-       <a href="book.html"><img id='book' src="images/book.jpg" alt="book"/></a>
+  <div id='photos'>
+    <img src='images/climate1.jpg' alt="poster"/>
+    <img src='images/climate2.jpg' alt="close"/>
+    <img src='images/climate3.jpg' alt="close3"/>
+ </div>
+  
+
+  <div id='information'>
+    <h1>10 Problems About Climate Change</h1>
+    <br>
+    <p> A brochure about the ten specific problems that Japan is affected from climate change. The book consists of a combination of illustrations, infographics and photography. The book was based on a three column grid, where imagery and text creates a blend. Book was bound in an accordion style with a soft cover.</p>
   </div>
-</body>
