--- a/final/10climate.html
+++ b/final/10climate.html
@@ -40,9 +40,9 @@ h1{font-size:15px;}
 </header>
 
   <div id='photos'>
-    <img src='images/climate1.jpg' alt="poster"/>
-    <img src='images/climate2.jpg' alt="close"/>
-    <img src='images/climate3.jpg' alt="close3"/>
+    <img src='images/climate1.JPG' alt="poster"/>
+    <img src='images/climate2.JPG' alt="close"/>
+    <img src='images/climate3.JPG' alt="close3"/>
  </div>
   
 
