--- a/final/work.html
+++ b/final/work.html
@@ -45,6 +45,6 @@ h1{font-size:15px;}
       <a href="songposter.html"><img id='miyavi' src="images/songposter.png" alt="songposter"/></a> 
        <a href="opposites.html"><img id='opposites' src="images/opposites.png" alt="opposites"/></a>
        <a href="10climate.html"><img id='climate' src="images/climate.png" alt="climate"/></a>
-       <a href="book.html"><img id='book' src="images/book.jpg" alt="book"/></a>
+       <a href="book.html"><img id='book' src="images/book.png" alt="book"/></a>
   </div>
 </body>
