--- a/final/webpage_text.html
+++ b/final/webpage_text.html
@@ -16,10 +16,10 @@ a{color:white;
 h1{font-size:15px;}
 </style>
 
-  <head>
+  
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="style.css" />
-  </head>
+
   <body>
     <div id='website'>
   	<header id='site-header'>
@@ -27,14 +27,20 @@ h1{font-size:15px;}
   <nav id='top-nav'>
     <ul>
     <li class='circle'>
-      <a href='about.html'>ABOUT</a> 
+      <a href='about.html'style="text-decoration: none;">ABOUT</a> 
       </li>
       <li class='circle'> 
-        <a href='work.html'>WORK</a>
+        <a href='work.html'style="text-decoration: none;">WORK</a>
       </li>
       <li class='circle'>
-        <a href='resume.html'>RESUME</a>
+        <a href='resume.html'style="text-decoration: none;">RESUME</a>
       </li>
+    </ul>
   </nav>
 </header>
+
+<div id='slideshow'>
+  <img id='shot' src="images/front_page.png" alt="songposter"/>
 </div>
+</div>
+
