--- a/final/book.html
+++ b/final/book.html
@@ -51,5 +51,5 @@ h1{font-size:15px;}
   <div id='information'>
     <h1>Visions of Design</h1>
     <br>
-    <p> A brochure about the ten specific problems that Japan is affected from climate change. The book consists of a combination of illustrations, infographics and photography. The book was based on a three column grid, where imagery and text creates a blend. Book was bound in an accordion style with a soft cover.</p>
+    <p>Book design featuring two different texts compiled together. Hand bound by perfect binding, with a hard cover.</p>
   </div>
