--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -9,17 +9,18 @@
     <h1><a href='#'>Dog vs Cats</a></h1>
     </header>
 
-    	 <nav id='top-menu'>
-      <ul class='menu'>
-        <li><a href="#" style="text-decoration: none;">PHOTOS</a></li>
+    	 <nav>
+
+      <ul id='navigation'>
+        <li class='menu'><a href="#" style="text-decoration: none;">PHOTOS</a></li>
         <li>&bullet;</li>
-        <li><a href="#" style="text-decoration: none;">ABOUT</a></li>
+        <li class='menu'><a href="#" style="text-decoration: none;">ABOUT</a></li>
          <li>&bullet;</li>
-        <li><a href="#" style="text-decoration: none;">SUBMIT</a></li>
+        <li class='menu'><a href="#" style="text-decoration: none;">SUBMIT</a></li>
          <li>&bullet;</li>
-        <li><a href="#" style="text-decoration: none;">BLOG</a></li>
+        <li class='menu'><a href="#" style="text-decoration: none;">BLOG</a></li>
          <li>&bullet;</li>
-        <li><a href="#" style="text-decoration: none;">CONTACT</a></li>
+        <li class='menu'><a href="#" style="text-decoration: none;">CONTACT</a></li>
 
     </ul>
 
