--- a/final/opposites.html
+++ b/final/opposites.html
@@ -1,24 +1,4 @@
-<!DOCTYPE html>
-<html>
-<style>
-.circle{width:120px;
-height:120px;
-border-radius:250px;
-font-size:15px;
-color:#fff;
-line-height:120px;
-text-align:center;
-background:#000;
-margin:5px;
-}
-a{color:white;}
-img{height:50%;
-    width:50%;}
-h1{font-size:15px;}
-</style>
-
-  
-  <!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <style>
 .circle{width:80px;
@@ -38,7 +18,7 @@ h1{font-size:15px;}
 
   
     <title>My Title</title>
-    <link rel="stylesheet" type='text/css' href="artworkpage.css" />
+    <link rel="stylesheet" type='text/css' href="style.css" />
   
 
   <body id='website'>
