--- a/final/lemon.html
+++ b/final/lemon.html
@@ -18,7 +18,7 @@ h1{font-size:15px;}
 
   
     <title>My Title</title>
-    <link rel="stylesheet" type='text/css' href="artworkpage.css" />
+    <link rel="stylesheet" type='text/css' href="style.css" />
   
 
   <body id='website'>
