--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <title>My Title</title>
@@ -14,15 +15,15 @@
     <section>
     	 <nav>
       <ul>
-        <li><a href="#" style="text-decoration: none;">PHOTOS</a></li>
+        <li><a href="#" style="text-decoration: none; color:black;">PHOTOS</a></li>
         <li>&bullet;</li>
-        <li><a href="#" style="text-decoration: none;">ABOUT</a></li>
+        <li><a href="#" style="text-decoration: none; color:black;">ABOUT</a></li>
          <li>&bullet;</li>
-        <li><a href="#" style="text-decoration: none;">SUBMIT</a></li>
+        <li><a href="#" style="text-decoration: none; color:black;">SUBMIT</a></li>
          <li>&bullet;</li>
-        <li><a href="#" style="text-decoration: none;">BLOG</a></li>
+        <li><a href="#" style="text-decoration: none; color:black;">BLOG</a></li>
          <li>&bullet;</li>
-        <li><a href="#" style="text-decoration: none;">CONTACT</a></li>
+        <li><a href="#" style="text-decoration: none; color:black;">CONTACT</a></li>
     </ul>
 
 </nav>
@@ -42,7 +43,6 @@
         	<img src="images/cat-pic.jpg" alt="cat pic"/>
         	<h2>Cats Have Better Toungs</h2>
         	<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
-
         </article>
         </section>
 
