--- a/final/10climate.html
+++ b/final/10climate.html
@@ -19,6 +19,8 @@ h1{font-size:15px;}
   
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="style.css" />
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
+    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
   
 
   <body id='website'>
@@ -39,12 +41,17 @@ h1{font-size:15px;}
   </nav>
 </header>
 
-  <div id='photos'>
+  <div id='photos' class='nivoSlider'>
     <img src='images/climate1.JPG' alt="poster"/>
     <img src='images/climate2.JPG' alt="close"/>
     <img src='images/climate3.JPG' alt="close3"/>
  </div>
-  
+
+  <script type="text/javascript">
+$(window).load(function() {
+    $('#photos').nivoSlider();
+});
+</script>
 
   <div id='information'>
     <h1>10 Problems About Climate Change</h1>
