--- a/final/opposites.html
+++ b/final/opposites.html
@@ -19,6 +19,8 @@ h1{font-size:15px;}
   
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="style.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
+    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
   
 
   <body id='website'>
@@ -39,10 +41,16 @@ h1{font-size:15px;}
   </nav>
 </header>
 
-  <div id='photos'>
+  <div id='photos' class='nivoSlider'>
     <img src='images/opposites_image.jpg' alt="image"/>
     <img src='images/opposites2.jpg' alt="image2"/>
   </div>
+
+<script type="text/javascript">
+$(window).load(function() {
+    $('#photos').nivoSlider();
+});
+</script>
 
     <div id='information'>
     <h1>Opposites</h1>
