--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -9,7 +9,7 @@
 
     <header id='site-header'>
       <section>
-    <h1><a href='#'>Dog vs Cats</a></h1>
+    <h1><a href='#'>DOGS VS CATS</a></h1>
 </section>
     
     <section>
