--- a/final/songposter.html
+++ b/final/songposter.html
@@ -1,25 +1,10 @@
   
   <!DOCTYPE html>
 <html>
-<style>
-.circle{width:80px;
-height:80px;
-border-radius:250px;
-font-size:0.8em;
-color:#fff;
-line-height:80px;
-text-align:center;
-background:#000;
-margin:5px;
-}
-.circle a{color:white;
-  list-style:none;}
-h1{font-size:15px;}
-</style>
-
-  
+<head>
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="style.css" />
+</head>
   
 
   <body id='website'>
