--- a/final/10climate.html
+++ b/final/10climate.html
@@ -1,27 +1,13 @@
    <!DOCTYPE html>
 <html>
-<style>
-.circle{width:80px;
-height:80px;
-border-radius:250px;
-font-size:0.8em;
-color:#fff;
-line-height:80px;
-text-align:center;
-background:#000;
-margin:5px;
-}
-.circle a{color:white;
-  list-style:none;}
-h1{font-size:15px;}
-</style>
-
-  
+<head>
     <title>My Title</title>
-    <link rel="stylesheet" type='text/css' href="style.css" />
+    <link rel="stylesheet" type='text/css' href='style.css'/>
+    <link rel="stylesheet" type='text/css' href='nivo-slider.css'/>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
-    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
-  
+        <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
+</head>
+ 
 
   <body id='website'>
     <header id='site-header'>
@@ -40,6 +26,7 @@ h1{font-size:15px;}
     </ul>
   </nav>
 </header>
+
 
   <div id='photos' class='nivoSlider'>
     <img src='images/climate1.JPG' alt="poster"/>
