--- a/final/book.html
+++ b/final/book.html
@@ -1,24 +1,12 @@
    <!DOCTYPE html>
 <html>
-<style>
-.circle{width:80px;
-height:80px;
-border-radius:250px;
-font-size:0.8em;
-color:#fff;
-line-height:80px;
-text-align:center;
-background:#000;
-margin:5px;
-}
-.circle a{color:white;
-  list-style:none;}
-h1{font-size:15px;}
-</style>
-
-  
+<head>  
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="style.css" />
+    <link rel="stylesheet" type='text/css' href='nivo-slider.css'/>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
+    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
+</head>
   
 
   <body id='website'>
@@ -40,12 +28,18 @@ h1{font-size:15px;}
 </header>
 
 
-  <div id='photos'>
+  <div id='photos' class='nivoSlider'>
     <img src='images/book1.png' alt="poster"/>
     <img src='images/book2.png' alt="close"/>
     <img src='images/book3.png' alt="close3"/>
     <img src='images/book4.png' alt="close3"/>
  </div>
+
+  <script type="text/javascript">
+$(window).load(function() {
+    $('#photos').nivoSlider();
+});
+</script>
   
 
   <div id='information'>
