--- a/final/lemon.html
+++ b/final/lemon.html
@@ -1,24 +1,13 @@
     <!DOCTYPE html>
 <html>
-<style>
-.circle{width:80px;
-height:80px;
-border-radius:250px;
-font-size:0.8em;
-color:#fff;
-line-height:80px;
-text-align:center;
-background:#000;
-margin:5px;
-}
-.circle a{color:white;
-  list-style:none;}
-h1{font-size:15px;}
-</style>
-
-  
+<head>
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="style.css" />
+    <link rel="stylesheet" type='text/css' href='nivo-slider.css'/>
+    <link rel="stylesheet" href="themes/light/light.css" type="text/css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
+    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
+</head>
   
 
   <body id='website'>
@@ -39,11 +28,19 @@ h1{font-size:15px;}
   </nav>
 </header>
 
-  <div id='photos'>
-    <img src='images/lemon1.jpg' alt="poster"/>
-    <img src='images/lemon2.jpg' alt="close"/>
-    <img src='images/lemon3.jpg' alt="close3"/>
+<div class="slider-wrapper theme-light">
+  <div id='photos' class='nivoSlider'>
+    <img src='images/lemon1.jpg' alt="poster" data-transition="slideInLeft" />
+    <img src='images/lemon2.jpg' alt="close" data-transition="slideInLeft" />
+    <img src='images/lemon3.jpg' alt="close3" data-transition="slideInLeft" />
  </div>
+</div>
+
+<script type="text/javascript">
+$(window).load(function() {
+    $('#photos').nivoSlider();
+});
+</script>
   
 
   <div id='information'>
