--- a/final/opposites.html
+++ b/final/opposites.html
@@ -1,27 +1,13 @@
  <!DOCTYPE html>
 <html>
-<style>
-.circle{width:80px;
-height:80px;
-border-radius:250px;
-font-size:0.8em;
-color:#fff;
-line-height:80px;
-text-align:center;
-background:#000;
-margin:5px;
-}
-.circle a{color:white;
-  list-style:none;}
-h1{font-size:15px;}
-</style>
-
-  
+<head>  
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="style.css" />
+    <link rel="stylesheet" type='text/css' href="nivo-slider.css" />
+    <link rel="stylesheet" href="themes/light/light.css" type="text/css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
     <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
-  
+  </head>
 
   <body id='website'>
     <header id='site-header'>
@@ -41,10 +27,12 @@ h1{font-size:15px;}
   </nav>
 </header>
 
+<div class="slider-wrapper theme-light">
   <div id='photos' class='nivoSlider'>
-    <img src='images/opposites_image.jpg' alt="image"/>
-    <img src='images/opposites2.jpg' alt="image2"/>
+    <img src='images/opposites_image.jpg' alt="image" data-transition="slideInLeft" />
+    <img src='images/opposites2.jpg' alt="image2" data-transition="slideInLeft" />
   </div>
+</div>
 
 <script type="text/javascript">
 $(window).load(function() {
