--- a/final/webpage_text.html
+++ b/final/webpage_text.html
@@ -8,7 +8,7 @@
   <body>
     <div id='website'>
   	<header id='site-header'>
-  <h1><a href='sishii128.github.io/final/webpage_text.html/'>Site Logo</a></h1>
+  <h1><a href='webpage_text.html/'>Site Logo</a></h1>
   <nav id='top-nav'>
     <ul>
     <li class='circle'>
