--- a/final/lemon.html
+++ b/final/lemon.html
@@ -4,7 +4,7 @@
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="style.css" />
     <link rel="stylesheet" type='text/css' href='nivo-slider.css'/>
-    <link rel="stylesheet" href="themes/light/light.css" type="text/css" />
+    <link rel="stylesheet" href="themes/default/default.css" type="text/css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
     <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
 </head>
@@ -28,7 +28,7 @@
   </nav>
 </header>
 
-<div class="slider-wrapper theme-light">
+<div class="slider-wrapper theme-default">
   <div id='photos' class='nivoSlider'>
     <img src='images/lemon1.jpg' alt="poster" data-transition="slideInLeft" />
     <img src='images/lemon2.jpg' alt="close" data-transition="slideInLeft" />
