--- a/final/lemon.html
+++ b/final/lemon.html
@@ -38,7 +38,9 @@
 
 <script type="text/javascript">
 $(window).load(function() {
-    $('#photos').nivoSlider();
+    $('#photos').nivoSlider({
+      manualAdvance: true
+    });
 });
 </script>
   
