--- a/final/10climate.html
+++ b/final/10climate.html
@@ -4,6 +4,7 @@
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href='style.css'/>
     <link rel="stylesheet" type='text/css' href='nivo-slider.css'/>
+    <link rel="stylesheet" href="themes/default/default.css" type="text/css" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
         <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
 </head>
@@ -27,12 +28,13 @@
   </nav>
 </header>
 
-
+<div class="slider-wrapper theme-default">
   <div id='photos' class='nivoSlider'>
-    <img src='images/climate1.JPG' alt="poster"/>
-    <img src='images/climate2.JPG' alt="close"/>
-    <img src='images/climate3.JPG' alt="close3"/>
+    <img src='images/climate1.JPG' alt="poster" data-transition="slideInLeft" />
+    <img src='images/climate2.JPG' alt="close" data-transition="slideInLeft" />
+    <img src='images/climate3.JPG' alt="close3" data-transition="slideInLeft" />
  </div>
+</div>
 
   <script type="text/javascript">
 $(window).load(function() {
