--- a/final/lemon.html
+++ b/final/lemon.html
@@ -30,9 +30,9 @@
 
 <div class="slider-wrapper theme-default">
   <div id='photos' class='nivoSlider'>
-    <img src='images/lemon1.jpg' alt="poster" data-transition="slideInLeft" />
-    <img src='images/lemon2.jpg' alt="close" data-transition="slideInLeft" />
-    <img src='images/lemon3.jpg' alt="close3" data-transition="slideInLeft" />
+    <img id='images' src='images/lemon1.jpg' alt="poster" data-transition="slideInLeft" />
+    <img id='images' src='images/lemon2.jpg' alt="close" data-transition="slideInLeft" />
+    <img id='images' src='images/lemon3.jpg' alt="close3" data-transition="slideInLeft" />
  </div>
 </div>
 
