--- a/final/100poster.html
+++ b/final/100poster.html
@@ -34,7 +34,7 @@
     <img class='image3' src='images/close_up3.png' alt="close3" data-transition="slideInLeft" />
     <img class='image4' src='images/close_up2.png' alt="close2" data-transition="slideInLeft" />
   </div>
-</div>
+
 
   <script type="text/javascript">
 $(window).load(function() {
@@ -48,6 +48,17 @@ $(window).load(function() {
     <p> A poster featuring data of the last 100 bass guitars I have played at an instrument store. Data organized in a format where viewer can see each specific attribute of the instrument. </p>
   </div>
 
- 
+      <div id='others'>
+    <h1>Other Projects</h1>
+    <br>
+    <ul class='project menu'> 
+        <li><a href="lemon.html" style="text-decoration: none; color:black;">When Life gives You Lemons</a></li>
+        <li><a href="songposter.html" style="text-decoration: none; color:black;">DAY 1 Poster</a></li>
+        <li><a href="opposites.html" style="text-decoration: none; color:black;">Opposites</a></li>
+        <li><a href="book.html" style="text-decoration: none; color:black;">Visions of Design</a></li>
+          <li><a href="10climate.html" style="text-decoration: none; color:black;">10 Problems About Climate Change</a></li>
+      </ul>
+
+  </div>
 
 
