--- a/final/10climate.html
+++ b/final/10climate.html
@@ -34,7 +34,6 @@
     <img src='images/climate2.JPG' alt="close" data-transition="slideInLeft" />
     <img src='images/climate3.JPG' alt="close3" data-transition="slideInLeft" />
  </div>
-</div>
 
   <script type="text/javascript">
 $(window).load(function() {
@@ -45,5 +44,18 @@ $(window).load(function() {
   <div id='information'>
     <h1>10 Problems About Climate Change</h1>
     <br>
-    <p> A brochure about the ten specific problems that Japan is affected from climate change. The book consists of a combination of illustrations, infographics and photography. The book was based on a three column grid, where imagery and text creates a blend. Book was bound in an accordion style with a soft cover.</p>
+    <p> A brochure about the ten problems that Japan is affected from climate change. The book consists of a combination of illustrations, infographics and photography. The book was based on a three column grid, where imagery and text creates a blend. Book was bound in an accordion style.</p>
   </div>
+
+     <div id='others'>
+    <h1>Other Projects</h1>
+    <br>
+    <ul class='project menu'> 
+        <li><a href="100poster.html" style="text-decoration: none; color:black;">A Visualization of 100 Bass Guitars</a></li>
+        <li><a href="lemon.html" style="text-decoration: none; color:black;">When Life gives You Lemons</a></li>
+        <li><a href="songposter.html" style="text-decoration: none; color:black;">DAY 1 Poster</a></li>
+        <li><a href="opposites.html" style="text-decoration: none; color:black;">Opposites</a></li>
+        <li><a href="book.html" style="text-decoration: none; color:black;">Visions of Design</a></li>
+      </ul>
+  </div>
+</div>
