--- a/final/lemon.html
+++ b/final/lemon.html
@@ -30,11 +30,12 @@
 
 <div class="slider-wrapper theme-default">
   <div id='photos' class='nivoSlider'>
-    <img src='images/lemon1.jpg' alt="poster" data-transition="slideInLeft" />
-    <img src='images/lemon2.jpg' alt="close" data-transition="slideInLeft" />
+    <img src='images/lemon1.jpg' alt="close1" data-transition="slideInLeft" />
+    <img src='images/lemon2.jpg' alt="close2" data-transition="slideInLeft" />
     <img src='images/lemon3.jpg' alt="close3" data-transition="slideInLeft" />
+    <img src='images/lemon4.jpg' alt="close4" data-transition="slideInLeft" />
  </div>
-</div>
+
 
 <script type="text/javascript">
 $(window).load(function() {
@@ -50,3 +51,16 @@ $(window).load(function() {
     <br>
     <p> A set of 10 recipe cards. The recipe cards were designed to portray a feeling of old style children's books. The case was designed to portray a vintage boook case to accompany the old-style atmosphere from the recipe cards.</p>
   </div>
+
+   <div id='others'>
+    <h1>Other Projects</h1>
+    <br>
+    <ul class='project menu'> 
+        <li><a href="100poster.html" style="text-decoration: none; color:black;">A Visualization of 100 Bass Guitars</a></li>
+        <li><a href="songposter.html" style="text-decoration: none; color:black;">Day 1 Poster</a></li>
+        <li><a href="opposites.html" style="text-decoration: none; color:black;">Opposites</a></li>
+        <li><a href="book.html" style="text-decoration: none; color:black;">Visions of Design</a></li>
+        <li><a href="10climate.html" style="text-decoration: none; color:black;">Ten Things About Climate Change</a></li>
+      </ul>
+  </div>
+</div>
