--- a/final/opposites.html
+++ b/final/opposites.html
@@ -32,7 +32,6 @@
     <img src='images/opposites_image.jpg' alt="image" data-transition="slideInLeft" />
     <img src='images/opposites2.jpg' alt="image2" data-transition="slideInLeft" />
   </div>
-</div>
 
 <script type="text/javascript">
 $(window).load(function() {
@@ -46,11 +45,15 @@ $(window).load(function() {
     <p> A series of posters featuring the two opposite meanings: healthy and unhealthy. Two posters were created where one was image based and the other was typography based. The concept for the posters was to showcase two different objects which were similar in shape to convey two opposing meanings.</p>
  </div>
 
-  <aside>
-    <h1>Projects</h1>
-    <ul class='project menu'>
-        <li><a href="lemon.html" style="text-decoration: none;">Recipe Cards</a></li>
-        <li><a href="songposter.html" style="text-decoration: none;">DAY 1 Poster</a></li>
-        <li><a href="opposites.html" style="text-decoration: none;">Opposites</a></li>
+  <div id='others'>
+    <h1>Other Projects</h1>
+    <br>
+    <ul class='project menu'> 
+        <li><a href="100poster.html" style="text-decoration: none; color:black;">A Visualization of 100 Bass Guitars</a></li>
+        <li><a href="lemon.html" style="text-decoration: none; color:black;">When Life Gives You Lemons</a></li>
+        <li><a href="songposter.html" style="text-decoration: none; color:black;">DAY 1 Poster</a></li>
+        <li><a href="book.html" style="text-decoration: none; color:black;">Visions of Design</a></li>
+        <li><a href="10climate.html" style="text-decoration: none; color:black;">Ten Things About Climate Change</a></li>
       </ul>
-  </aside>
+  </div>
+</div>
