--- a/final/songposter.html
+++ b/final/songposter.html
@@ -35,3 +35,15 @@
       <br>
     <p> A poster for the song DAY 1 by a Japanese Guitarist named Miyavi. The poster was created from influence by designer Takashi Kondo. The concept of the poster was to create the strong layers of the song through painting and photo collaging.</p>
 </div>
+
+ <div id='others'>
+    <h1>Other Projects</h1>
+    <br>
+    <ul class='project menu'> 
+        <li><a href="100poster.html" style="text-decoration: none; color:black;">A Visualization of 100 Bass Guitars</a></li>
+        <li><a href="lemon.html" style="text-decoration: none; color:black;">Recipe Cards</a></li>
+        <li><a href="opposites.html" style="text-decoration: none; color:black;">Opposites</a></li>
+        <li><a href="book.html" style="text-decoration: none; color:black;">Visions of Design</a></li>
+        <li><a href="10climate.html" style="text-decoration: none; color:black;">Ten Things About Climate Change</a></li>
+      </ul>
+  </div>
