--- a/final/about.html
+++ b/final/about.html
@@ -31,8 +31,15 @@
       <br>
       <p>Feel free to contact me through e-mail or twitter about any design work or just to say hi!</p>
 <ul id='contacts'>
-       <li><a href="mailto:sishii@massart.edu">EMAIL LOGO</a></li>
-       <li><a href="https://twitter.com"> TWITTER LOGO</a></li>
+       <li><a href="mailto:sishii@massart.edu">
+            <img src="images/mail.png" alt='mail'/>
+            </a>
+          </li>
+       <li><a href="https://twitter.com">
+         <img src="images/twitter.png" alt='twitter'/>
+            </a>
+          </li>
+       </li>
 </ul>
 </div>
 </div>
